# sui-workspace

./: .dockerignore  .env  .gitignore  Cargo.toml  docker-compose.local.yml  docker-compose.yml  sqlx-data.json
backend/: .dockerignore  .gitignore  Cargo.toml  build.rs
backend/docker/: backend.Dockerfile  migrator.Dockerfile
backend/migrations/: 20221209220503_create_table_nft_tokens.sql  20230201110728_add_column_items_to_nft_tokens.sql  20230201115550_rename_table_name_nft_tokens_to_nfts.sql  20230214055131_add_attached_to_column_to_nfts_table.sql
backend/scripts/: entry_point.sh  entrypoint.sh  init_db_compose.sh  init_db_local_docker.sh
backend/src/: config.rs  graphql.rs  lib.rs  main.rs  routes.rs  startup.rs
backend/src/routes/: graphql.rs  healthcheck.rs
backend/tests/: healthcheck.rs  helpers.rs
docker/: certbot.Dockerfile  nginx.Dockerfile  project.Dockerfile
indexer/: .gitignore  Cargo.toml  build.rs  queries.graphql  schema.graphql
indexer/graphql/: insert_nft.graphql  queries.graphql
indexer/scripts/: entrypoint.sh
indexer/src/: config.rs  graphql.rs  lib.rs  main.rs  telemetry.rs
models/: Cargo.toml
models/src/: errors.rs  events.rs  lib.rs
scripts/: certbot-entrypoint.sh  nginx-entrypoint.sh
