[workspace]

members = ["models", "backend", "indexer"]

[workspace.dependencies]
# async runtime
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
# error handling
anyhow = "1.0.68"
eyre = "0.6.8"
thiserror = "1.0.38"
# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
# serialization
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
# configuration
config = { version = "0.13.3", default-features = false, features = ["toml"] }
# time
chrono = { version = "0.4.23", features = ["serde"] }
# graphql sever
async-graphql = { version = "5.0.4", features = ["chrono"] }
