[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
# async runtime
tokio = { workspace = true }
# server
axum = { version = "0.6.4", features = ["http2", "ws", "macros"] }
hyper = { version = "0.14.23", features = ["server"] }
# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
# serialization
serde = { workspace = true }
# graphql
async-graphql = { workspace = true }
async-graphql-axum = "5.0.5"
# database
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate", "offline", "decimal", "json"] }
# configuration
config = { workspace = true }
# battlemon models
models = { path = "../models" }

[dev-dependencies]
reqwest = "0.11.13"

