[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
# http
reqwest = { version = "0.11.13", features = ["json"] }
# error handling
anyhow = "1.0.67"
thiserror = "1.0.37"
# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
# serialization
serde_json = "1.0.89"
serde = { version = "1.0.151", features = ["derive"] }
# configuration
config = { version = "0.13.3", default-features = false, features = ["toml"] }
# battlemon models
models = { path = "../models" }
# graphql
graphql_client = "0.11.0"
# time
chrono = "0.4.23"