[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { workspace = true }
futures = { workspace = true }
# http
reqwest = { version = "0.11.13", features = ["json"] }
# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
# configuration
config = { workspace = true }
# battlemon models
models = { path = "../models" }
# graphql
graphql_client = "0.11.0"
# time
chrono = { workspace = true }

[build-dependencies]
# graphql
async-graphql = "5.0.3"
# error handling
anyhow = "1.0.67"
# battlemon models
models = { path = "../models" }
# database
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate", "offline", "decimal", "json"] }
# logging
tracing = "0.1.37"
