[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.4", features = ["chrono"] }
serde = { version = "1.0.151", features = ["derive"] }
# error handling
anyhow = "1.0.67"
serde_json = "1.0.90"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx-core = { version = "0.6.2", features = ["json", "runtime-tokio-rustls"] }
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "a8af20d94e951ecfb6d0cd47c23cf6393013d8a8" }
