[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
# graphql sever
async-graphql = { workspace = true }
# error handling
anyhow = { workspace = true }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
# time
chrono = { workspace = true }
# database
sqlx-core = { version = "0.6.2", features = ["json", "runtime-tokio-rustls"] }
# sui json-rpc
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "cece992" }
